# Chat-bot1

./: CMakeLists.txt  coutry.cpp  coutry.h  flag.txt  stolica.txt  strana.txt
